# rupnil.codes

./: .gitignore  Cargo.toml  LICENSE  README.md  example.env  firebase.js  header.html  index.html  script.js  style.css
.github/: FUNDING.yml  pages.yml
.github/workflows/: pages.yml
about-us/: index.html
account/: dashboard.html  deleted.html  login.html  settings.html  signup.html
contact/: index.html
deploy/: rupnil.service
docs/: index.html
docs/ft/: index.html
donate/: index.html
firebase/: auth.js  db.js
migrations/: 0001_create_users.sql  0002_create_user_identities.sql  0003_create_user_tokens.sql  0004_create_magic_links.sql  0005_add_indices.sql  0006_create_refresh_tokens.sql
public/: ads.txt  firebase.js  footer.html  header.html  index.html
public/account/: dashboard.html  login.html  settings.html  signup.html
public/assets/: hca.js
public/donate/: index.html
public/firebase/: analytics.js  init.js
src/: auth.rs  main.rs  routes.rs  state.rs
src/handlers/: auth.rs
src/models/: identity.rs  user.rs
src/services/: crypto.rs  hca_client.rs  mod.rs
terms/: index.html
website/: footer.html  header.html  index.html  script.js  style.css
website/about-us/: index.html
website/account/: login.html  settings.html
website/docs/: index.html
website/donate/: index.html
