[package]
name = "rupnilcodes"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
oauth2 = "4.0.0"
jsonwebtoken = "8"
secrecy = "0.8"
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
base64 = "0.21"
getrandom = "0.2"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.4", features = ["add-extension"] }
url = "2"
axum-server = "0.4"
hyper = "0.14"
tower = { version = "0.4", features = ["make"] }
dotenv = "0.15"
[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
opt-level = 3
